--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,252 +1,255 @@
 /* This CSS rule sets the default font size of the entire document */
 html {
-    font-size: 16px;
-  }
-  
-  /* These CSS rules sets the text direction of the paragraph (RTL or LTR) */
-  p,
-  .bpw-from-bot > div,
-  #input-message {
-    direction: ltr;
-  }
-  
-  /* This rule changes the color of the text in the input message */
-  #input-message {
-    color: #000000;
-  }
-  
-  /* Changes the color of the new message indicator */
-  .bpw-new-messages-indicator {
-    background-color: #fcfeff;
-    color: #000000;
-  }
-  
-  /* Styling for the chat header container */
-  .bpw-header-container {
-    margin: 10px;
-    background: #fcfeff;
-    border-radius: 10px;
-    position: relative;
-    overflow: hidden;
-    border: 1px;
-    border-radius: 10px;
-    color: #000000;
-  }
-  
-  .bpw-header-name{
-    color: #000000;
-  }
-  
-  /* Styling for the typing bubble */
-  .bpw-typing-bubble {
-    background: #294857;
-  }
-  
-  /* Styling for the chat bubble content */
-  .bpw-chat-bubble-content {
-    background-color: #fcfeff;
-    border-radius: 3px;
-    border: 1px transparent;
-  }
-  
-  /* Styling for the date container, header name, and header subtitle */
-  .bpw-date-container,
-  .bpw-header-name,
-  .bpw-header-subtitle {
-    color: #000000;
-  }
-  
-  /* Styling for the layout of the chat bubble. Width, height, border, position and radius of the chat bubble */
+  font-size: 16px;
+}
+
+/* These CSS rules sets the text direction of the paragraph (RTL or LTR) */
+p,
+.bpw-from-bot > div,
+#input-message {
+  direction: ltr;
+}
+
+/* This rule changes the color of the text in the input message */
+#input-message {
+  color: #294857;
+}
+
+/* Changes the color of the new message indicator */
+.bpw-new-messages-indicator {
+  background-color: #d5ead5;
+  color: #ffffff;
+}
+
+/* Styling for the chat header container */
+.bpw-header-container {
+  margin: 10px;
+  background: #366896;
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+  border: 1px;
+  border-radius: 10px;
+  color: #ffffff;
+}
+
+.bpw-header-name{
+  color: #ffffff;
+}
+
+/* Styling for the typing bubble */
+.bpw-typing-bubble {
+  background: #294857;
+}
+
+/* Styling for the chat bubble content */
+.bpw-chat-bubble-content {
+  background-color: #d5ead5;
+  border-radius: 3px;
+  border: 1px transparent;
+}
+
+/* Styling for the date container, header name, and header subtitle */
+.bpw-date-container {
+  color: #294857;
+}
+
+.bpw-header-name,
+.bpw-header-subtitle {
+  color: #ffffff;
+}
+
+/* Styling for the layout of the chat bubble. Width, height, border, position and radius of the chat bubble */
+.bpw-layout {
+  width: 360px !important;
+  height: 66vh;
+  border-radius: 10px;
+  right: 10px;
+  bottom: 5px;
+  border: 1px;
+}
+/* Responsive design rules for devices with width less than or equal to 767px */
+@media screen and (max-device-width: 767px) {
   .bpw-layout {
-    width: 360px !important;
-    height: 60vh;
-    border-radius: 10px;
-    right: 52px;
-    bottom: 52px;
-    border: 1px;
+    width: 100% !important;
+    height: 100%;
+    right: 0;
+    bottom: 0;
+    border-radius: 0;
   }
-  /* Responsive design rules for devices with width less than or equal to 767px */
-  @media screen and (max-device-width: 767px) {
-    .bpw-layout {
-      width: 100% !important;
-      height: 100%;
-      right: 0;
-      bottom: 0;
-      border-radius: 0;
-    }
-  }
-  
-  /* Changes the fill color of the header icons to white */
-  .bpw-header-icon,
-  .bpw-header-icon svg,
-  .bpw-header-icon svg path {
-    fill: #000000 !important;
-  }
-  
-  /* Changes the color of the placeholder text in the input message */
-  #input-message::placeholder {
-    color: rgba(0,0,0,.30);
-  }
-  
-  .bpw-composer textarea{
-    outline: none !important;
-    border: 1px solid rgba(0,0,0,.15);
-  }
-  .bpw-composer textarea:focus{
-    outline: none !important;
-    border: 1px solid rgba(0,0,0,.30);
-  }
-  
-  /* Styling for the keyboard single choice option */
-  .bpw-keyboard-single-choice {
-    background-color: #f2f9ff;
-    border: none;
-  }
-  
-  /* Styling for the buttons in the chat interface */
-  .bpw-button,
-  .bpw-button-alt {
-    background-color: #c9edff;
-    color: #294857;
-    border-radius: 10px;
-    border: none;
-  }
-  
-  
-  /* Styling for hover effect on the buttons in the chat interface */
-  .bpw-button:hover,
-  .bpw-button-alt:hover {
-    background-color: #fcfeff;
-  }
-  
-  
-  /* Styling for hyperlinks in the chat interface */
-  a {
-    color: #09162e;
-    text-decoration: underline;
-  }
-  
-  /* Styling for the chat container, including color, scrollbar width and color, and border */
-  .bpw-chat-container {
-    background-color: #f2f9ff;
-    scrollbar-width: thin;
-    scrollbar-color: #fcfeff #f2f9ff;
-    border: none;
-  }
-  
-  /* Styling for the chat bubble content when it's from the bot */
-  .bpw-from-bot .bpw-chat-bubble .bpw-chat-bubble-content {
-    background-color: #fcfeff;
-    color: #294857;
-  }
-  
-  /* Styling for the chat bubble content when it's from the user */
-  .bpw-from-user .bpw-chat-bubble .bpw-chat-bubble-content {
-    background-color: #1d6e96;
-    color: #FFFFFF;
-  }
-  
-  /* Styling for the composer section of the chat interface */
-  .bpw-composer {
-    background-color: #f2f9ff;
-    border-top: none;
-  }
-  
-  
-  /* Styling for the scrollbar in the chat container */
-  .bpw-chat-container::-webkit-scrollbar,
-  .bpw-chat-container::-moz-scrollbar {
-    width: 10px;
-    background-color: #f2f9ff;
-    border: none;
-  }
-  
-  /* Styling for the avatar of the bot */
-  .bpw-bot-avatar img,
-  .bpw-bot-avatar svg {
-    background: #9eb4b8;
-    border: 3px solid #000000;
-  }
-  
-  /* Styling for the general scrollbar in the web page */
-  ::-webkit-scrollbar {
-    width: 0.5rem;
-  }
-  
-  /* Styling for the track of the general scrollbar and the chat container scrollbar */
-  ::-webkit-scrollbar-track,
-  .bpw-chat-container::-webkit-scrollbar-track,
-  .bpw-chat-container::-moz-scrollbar-track {
-    background-color: transparent;
-  }
-  
-  /* Styling for the thumb of the general scrollbar and the chat container scrollbar */
-  ::-webkit-scrollbar-thumb,
-  .bpw-chat-container::-webkit-scrollbar-thumb,
-  .bpw-chat-container::-moz-scrollbar-thumb {
-    background-color: #f2f9ff;
-    border-radius: 1rem;
-    border: 0.5rem solid transparent;
-  }
-  
-  /* Styling for the floating button icon in the chat interface */
-  .bpw-floating-button i svg path {
-    fill: #FFFFFF;
-  }
-  
-  
-  
-  /* Styling for the 'powered by' section of the chat interface */
-  .bpw-powered {
-    text-align: center;
-    padding: 10px;
-    color: #000000;
-    background: #f2f9ff;
-    font-size: 14px;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-  }
-  
-  /* Styling for the hyperlinks in the 'powered by' section of the chat interface */
-  .bpw-powered a {
-    color: #000000;
-    text-decoration: underline;
-  }
-  
-  /* Styling for hover effect on the hyperlinks in the 'powered by' section of the chat interface */
-  .bpw-powered a:hover {
-    text-decoration: underline;
-  }
-  
-  .bpw-send-button{
-    background: #fcfeff;
-  }
-  
-  
-  /* Change Bot Widget Icon */
-  
-  .bpw-widget-btn{
-    border-radius: 50%;
-    background:none;
-  }
-  
-  .bpw-floating-button::before {
-  background:url(https://static.wixstatic.com/media/ee6a71_3462c4b623d648e58fc9784c6510927f~mv2.png);
-  background-repeat: no-repeat;
-    background-position: center;
-  background-size: contain;
-  height:undefinedpx !important;
-  width:undefinedpx !important;
-  }
-  
-  .bpw-floating-button {
-    box-shadow: none !important;
-  }
-  
-  .bpw-floating-button:hover {
-    box-shadow: none !important;
-  }
-  
-  // .bpw-floating-button > i {
-  // display: none;
-  // }
+}
+
+/* Changes the fill color of the header icons to white */
+.bpw-header-icon,
+.bpw-header-icon svg,
+.bpw-header-icon svg path {
+  fill: #d5ead5 !important;
+}
+
+/* Changes the color of the placeholder text in the input message */
+#input-message::placeholder {
+  color: rgba(0,0,0,.30);
+}
+
+.bpw-composer textarea{
+  outline: none !important;
+  border: 1px solid rgba(0,0,0,.15);
+}
+.bpw-composer textarea:focus{
+  outline: none !important;
+  border: 1px solid rgba(0,0,0,.30);
+}
+
+/* Styling for the keyboard single choice option */
+.bpw-keyboard-single-choice {
+  background-color: #f2f9ff;
+  border: none;
+}
+
+/* Styling for the buttons in the chat interface */
+.bpw-button,
+.bpw-button-alt {
+  background-color: #e3f2fa;
+  color: #133358;
+  border-radius: 10px;
+  border: none;
+}
+
+
+/* Styling for hover effect on the buttons in the chat interface */
+.bpw-button:hover,
+.bpw-button-alt:hover {
+  background-color: #ffffff;
+}
+
+
+/* Styling for hyperlinks in the chat interface */
+a {
+  color: #0f4e4a;
+  text-decoration: underline;
+}
+
+/* Styling for the chat container, including color, scrollbar width and color, and border */
+.bpw-chat-container {
+  background-color: #f2f9ff;
+  scrollbar-width: thin;
+  scrollbar-color: #609bb1 #ffffff;
+  border: none;
+}
+
+/* Styling for the chat bubble content when it's from the bot */
+.bpw-from-bot .bpw-chat-bubble .bpw-chat-bubble-content {
+  background-color: #fcfeff;
+  color: #294857;
+}
+
+/* Styling for the chat bubble content when it's from the user */
+.bpw-from-user .bpw-chat-bubble .bpw-chat-bubble-content {
+  background-color: #e3f2fa;
+  color: #133358;
+}
+
+/* Styling for the composer section of the chat interface */
+.bpw-composer {
+  background-color: #f2f9ff;
+  border-top: none;
+}
+
+
+/* Styling for the scrollbar in the chat container */
+.bpw-chat-container::-webkit-scrollbar,
+.bpw-chat-container::-moz-scrollbar {
+  width: 10px;
+  background-color: #ffffff;
+  border: none;
+}
+
+/* Styling for the avatar of the bot */
+.bpw-bot-avatar img,
+.bpw-bot-avatar svg {
+  background: #f2f9ff;
+  border: none;
+}
+
+/* Styling for the general scrollbar in the web page */
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+/* Styling for the track of the general scrollbar and the chat container scrollbar */
+::-webkit-scrollbar-track,
+.bpw-chat-container::-webkit-scrollbar-track,
+.bpw-chat-container::-moz-scrollbar-track {
+  background-color: transparent;
+}
+
+/* Styling for the thumb of the general scrollbar and the chat container scrollbar */
+::-webkit-scrollbar-thumb,
+.bpw-chat-container::-webkit-scrollbar-thumb,
+.bpw-chat-container::-moz-scrollbar-thumb {
+  background-color: #ffffff;
+  border-radius: 1rem;
+  border: 0.5rem solid transparent;
+}
+
+/* Styling for the floating button icon in the chat interface */
+.bpw-floating-button i svg path {
+  fill: #d5ead5;
+}
+
+
+
+/* Styling for the 'powered by' section of the chat interface */
+.bpw-powered {
+  text-align: center;
+  padding: 10px;
+  color: #f2f9ff;
+  background: #f2f9ff;
+  font-size: 14px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+/* Styling for the hyperlinks in the 'powered by' section of the chat interface */
+.bpw-powered a {
+  color: #f2f9ff;
+  text-decoration: underline;
+}
+
+/* Styling for hover effect on the hyperlinks in the 'powered by' section of the chat interface */
+.bpw-powered a:hover {
+  text-decoration: underline;
+}
+
+.bpw-send-button{
+  background: #366896;
+}
+
+
+/* Change Bot Widget Icon */
+
+.bpw-widget-btn{
+  border-radius: 50%;
+  background:#f2f9ff;
+}
+
+.bpw-floating-button::before {
+background:url(https://static.wixstatic.com/media/ee6a71_3462c4b623d648e58fc9784c6510927f~mv2.png);
+background-repeat: no-repeat;
+  background-position: center;
+background-size: contain;
+height:52px !important;
+width:52px !important;
+}
+
+.bpw-floating-button {
+  box-shadow: none !important;
+}
+
+.bpw-floating-button:hover {
+  box-shadow: none !important;
+}
+
+// .bpw-floating-button > i {
+// display: none;
+// }
